--- a/mcp9600.ioc
+++ b/mcp9600.ioc
@@ -1,6 +1,9 @@
 #MicroXplorer Configuration settings - do not modify
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
+I2C1.IPParameters=Speed,Timing
+I2C1.Speed=10
+I2C1.Timing=0x000006C5
 KeepUserPlacement=false
 Mcu.CPN=STM32L053R8T3
 Mcu.Family=STM32L0
